--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="mx.com.superfish.colorweather">
-
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
 
@@ -22,9 +21,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".DalyWeatherActivity" />
-        <activity android:name=".HourlyWeatherActivity" />
-        <activity android:name=".MinutlyActivity"></activity>
+        <activity android:name=".DalyWeatherActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".HourlyWeatherActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".MinutlyActivity"
+            android:screenOrientation="portrait"></activity>
     </application>
-
 </manifest>
